--- a/codes/hospital-main.css
+++ b/codes/hospital-main.css
@@ -2,87 +2,356 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #183449;
 }
-:root {
-  --BG: linear-gradient(to right, #57aced, #a3d4fa);
-  --BG-MAIN: linear-gradient(to bottom, #57aced, #95cefa, #d2ecff);
-}
-img {
-  display: block;
-}
+
 body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  /* height: 250vh; */
+  
 }
 
-.head-section-div {
+:root {
+  --UPPER-HEADER-BG: rgb(255, 255, 255);
+  --MAIN-HEADING-FONT: Yeseva One;
+  --SUB-HEADING-FONT: Work Sans;
+  --MAIN-HEADING-COLOR: #1f2b6c;
+  --SUB-HEADING-COLOR: #159eec;
+}
+
+/* upper header */
+header {
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+}
+.upper-header-box-div {
+  max-width: 100%;
   height: 80px;
-  background: var(--BG);
   display: flex;
+  background-color: var(--UPPER-HEADER-BG);
+  justify-content: space-around;
   align-items: center;
+}
+.hospital-name {
+  font-weight: 700;
+  color: var(--MAIN-HEADING-COLOR);
+  font-size: 2rem;
+  font-family: var(--MAIN-HEADING-FONT);
+}
+#name-for-color {
+  color: var(--SUB-HEADING-COLOR);
+}
+.detail-list {
+  height: 43px;
+  width: 700px;
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+}
+.detail {
+  height: 40px;
+  width: 186px;
+  display: grid;
+  grid-template-columns: 40px 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+.detail-logo {
+  grid-row: 1/3;
+}
+.detail-head {
+  color: #1f2b6c;
+  grid-column: 2/3;
+  font-size: 16px;
+  line-height: 18px;
+}
+.detail-info {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  font-size: 16px;
+  line-height: 18px;
+  color: var(--SUB-HEADING-COLOR);
+}
+
+/* Lower header  */
+
+.nav-bar {
+  max-width: 100%;
+  height: 80px;
+  background-color: var(--MAIN-HEADING-COLOR);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.nav-bar-list {
+  list-style-type: none;
+  height: 30px;
+  width: 550px;
+  display: flex;
+  justify-content: space-between;
+
+  align-items: center;
+}
+.nav-bar-items,
+.home {
+  color: #fcfefe;
+  font-weight: 400;
+  font-size: 16px;
+}
+.home {
+  color: #bfd2f8;
+}
+.nav-bar-right {
+  height: 45px;
+  width: 223px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.appointment-box {
+  height: 45px;
+  width: 173px;
+  border-radius: 50px;
+  background-color: #bfd2f8;
+  color: var(--MAIN-HEADING-COLOR);
+  display: grid;
+  place-items: center;
+}
+
+/* main part  */
+main {
+  padding-top: 160px;
+}
+/* first view */
+
+.first-view-box {
+
+  max-width: 100%;
+  position: relative;
+  height: 650px;
+  background-color: #eceaf0;
   position: relative;
 }
-#header-logo {
-  height: 40px;
-  width: 40px;
+.doctor-img {
+  height: 645px;
+}
+.quote {
+  height: 230px;
+  width: 530px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  position: absolute;
+  top: 167px;
+  left: 786px;
+}
+.quote-upper {
+  font-size: 18px;
+  font-family: var(--SUB-HEADING-FONT);
+  font-weight: 700;
+  line-height: 22px;
+  color: var(--SUB-HEADING-COLOR);
+}
+.quote-heading {
+  font-family: var(--MAIN-HEADING-FONT);
+  font-size: 48px;
+  line-height: 55px;
+  font-weight: 600;
+  color: #1f2b6c;
+}
+.quote-lower {
+  width: 175px;
+  height: 45px;
+  background-color: #bfd2f8;
+  display: grid;
+  place-items: center;
+  border-radius: 50px;
 }
 
-.header-left {
-  position: absolute;
-  left: 20px;
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
-.header-left > p {
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-.header-middle ul {
-  position: absolute;
-  left: 400px;
-  top: 30px;
-  list-style: none;
-  gap: 80px;
-  display: flex;
-}
-.header-middle ul>li:hover{
-  
-  text-decoration: underline;
-}
-.header-right {
+/* book appointment */
+
+.book-box {
   display: flex;
   gap: 20px;
-  position: absolute;
-  right: 50px;
+  position: relative;
+  left: 300px;
+  top: -50px;
 }
-.main-div {
-  height: 400px;
-  background: var(--BG);
+.book-appointment {
+  height: 100px;
+  width: 318px;
+  border-radius: 5px;
+  background-color: var(--MAIN-HEADING-COLOR);
+  color: #fff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.book-appointment > img {
+  height: 50px;
+  width: 50px;
+}
+#book-appointment-color {
+  background-color: #bfd2f8;
+}
+#book-appointment-color2 {
+  background-color: var(--SUB-HEADING-COLOR);
+}
+
+/* wellcome message */
+
+.wellcome-message {
+  height: 210px;
+  width: 675px;
+  position: relative;
+  left: 500px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 50px 0;
+}
+.caption {
+  color: var(--SUB-HEADING-COLOR);
+  font-family: var(--SUB-HEADING-FONT);
+  font-weight: 700;
+  font-size: 30px;
+}
+.caption2 {
+  font-family: var(--MAIN-HEADING-FONT);
+  font-size: 36px;
+  font-weight: 500;
+  color: var(--MAIN-HEADING-COLOR);
+}
+.wellcome-message-describe {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  font-family: var(--SUB-HEADING-FONT);
+}
+.wellcome-message-learn-a {
+  font-family: var(--SUB-HEADING-FONT);
+  font-weight: 400;
+  font-size: 20px;
+  color: var(--SUB-HEADING-COLOR);
+  text-decoration: none;
+}
+.home-group-img {
+  width: 90%;
+  display: block;
+  margin: auto;
+}
+
+/* home services */
+
+.home-service-box {
+  height: 760px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.home-service-heading {
+  width: 320px;
+  height: 70px;
+  text-align: center;
+}
+#home-services {
+  font-size: 32px;
+  font-weight: 500;
+}
+.home-service-second-box {
+  width: 1000px;
+  height: 490px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.home-service-second-left {
+  width: 160px;
+  height: 485px;
+  border: 0.5px solid black;
+  border-radius: 5px;
+}
+.left-service-icon-box{
+  height: 110px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+ 
+}
+#left-services-icon-color{
+  background-color: #1F2B6C;
+  color: #BFD2F8;
+}
+.left-service-icon-view-all{
+  height: 44px;
+  display: grid;
+  place-items: center;
+  background-color: #1F2B6C;
+  border-radius: 0 0 5px 5px;
+}
+.home-service-second-middle {
+  width: 490px;
+  height: 385px;
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.second-service-heading{
+  font-size: 30px;
+  font-weight: 500;
+  font-family: var(--SUB-HEADING-FONT);
+  color: var(--MAIN-HEADING-COLOR);
+  line-height: 30px;
+}
+.second-service-list{
+  width: 500px;
+  height: 110px;
+  list-style: none;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(4,1fr);
-  grid-template-areas: 
-  "pic heading"
-  "pic describe"
-  "pic describe";
-  /* gap: 70px; */
+  grid-template-rows: 1fr 1fr;
 }
-.main-div > .quote {
-  font-weight: 900;
-  font-size: 2.5rem;
-  grid-area: heading;
+.second-service-list>li{
+  font-size: 20px;
+  font-family: var(--SUB-HEADING-FONT);
+  font-weight: 500;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
-.main-div > .describe {
-  color: rgba(255, 255, 255, 0.7);
-  font-size: 0.9rem;
-  font-weight: 100;
-  grid-area: describe;
-  width:600px;
-  line-height: 40px;
+
+.second-service-list-dot{
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background-color: #159eec;
 }
-.doctor-img {
-  grid-area: pic;
-  height: 400px;
+.second-service-explain{
+  font-size: 17px;
+  font-family:var(--SUB-HEADING-FONT);
+  font-weight: 400;
+  line-height: 22px;
 }
+.home-service-second-image {
+  height: 488px;
+  width: 325px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.home-service-second-img {
+  width: 325px;
+  height: 232px;
+}
+
+/* our specialties */
+
+
 
